Fixed trailing comma in json

--- a/package_specific.cfg
+++ b/package_specific.cfg
@@ -6,5 +6,5 @@ install_requires=["generallibrary", "generalvector", "generalfile", "pandas", "n
 extras_require={}
 classifiers=[
         "Development Status :: 2 - Pre-Alpha",
-        "Topic :: Software Development :: User Interfaces",
+        "Topic :: Software Development :: User Interfaces"
     ]
