--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -45,7 +45,7 @@ jobs:
           git clone ssh://git@github.com/ManderaGeneral/.github.git
       - name: Run Packager method 'workflow_unittest'
         run: |
-          !apt-get install -y xvfb
+          sudo apt-get install -y xvfb
           python -c "import os; os.system('Xvfb :1 -screen 0 1600x1200x16  &'); os.environ['DISPLAY']=':1.0'"
 
           python -c "from generalpackager import Packager; Packager('generalpackager').workflow_unittest()"
