--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -50,6 +50,7 @@ jobs:
           PACKAGER_GITHUB_API: ${{ secrets.PACKAGER_GITHUB_API }}
           TWINE_PASSWORD: ${{ secrets.TWINE_PASSWORD }}
           TWINE_USERNAME: ${{ secrets.TWINE_USERNAME }}
+          MANDERAGENERAL_TOKEN: ${{ secrets.MANDERAGENERAL_TOKEN }}
   sync:
     needs: unittest
     runs-on: ubuntu-latest
@@ -91,3 +92,4 @@ jobs:
           PACKAGER_GITHUB_API: ${{ secrets.PACKAGER_GITHUB_API }}
           TWINE_PASSWORD: ${{ secrets.TWINE_PASSWORD }}
           TWINE_USERNAME: ${{ secrets.TWINE_USERNAME }}
+          MANDERAGENERAL_TOKEN: ${{ secrets.MANDERAGENERAL_TOKEN }}
